// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`qwik directives > Image > altText 1`] = `
{
  "children": [],
  "props": {
    "alt": "foo",
    "loading": "lazy",
    "src": "http://some.url",
    "style": "object-fit:cover;object-position:center;",
  },
  "tag": "img",
}
`;

exports[`qwik directives > Image > altText 2`] = `
{
  "children": [],
  "props": {
    "loading": "lazy",
    "role": "presentation",
    "src": "http://some.url",
    "style": "object-fit:cover;object-position:center;",
  },
  "tag": "img",
}
`;

exports[`qwik directives > Image > anchor should wrap in <a> 1`] = `
{
  "children": [
    [
      {
        "children": [],
        "props": {
          "loading": "lazy",
          "role": "presentation",
          "src": "http://some.url",
          "style": "object-fit:cover;object-position:center;",
        },
        "tag": "img",
      },
    ],
  ],
  "props": {
    "class": undefined,
    "href": "my-url",
  },
  "tag": "a",
}
`;

exports[`qwik directives > Image > builder.io URLs are served using webp 1`] = `
{
  "children": undefined,
  "props": {
    "srcset": "http://foo.builder.io/foo?format=webp&width=100 100w, http://foo.builder.io/foo?format=webp&width=200 200w, http://foo.builder.io/foo?format=webp&width=400 400w, http://foo.builder.io/foo?format=webp&width=800 800w, http://foo.builder.io/foo?format=webp&width=1200 1200w, http://foo.builder.io/foo?format=webp&width=1600 1600w, http://foo.builder.io/foo?format=webp&width=2000 2000w",
    "type": "image/webp",
  },
  "tag": "source",
}
`;

exports[`qwik directives > Image > builder-pixel is eager 1`] = `
{
  "children": [],
  "props": {
    "loading": "eager",
    "role": "presentation",
    "src": "http://some.url",
    "style": "object-fit:cover;object-position:center;",
  },
  "tag": "img",
}
`;

exports[`qwik directives > Image > images are lazy loaded 1`] = `
{
  "children": [],
  "props": {
    "loading": "lazy",
    "role": "presentation",
    "src": "http://some.url",
    "style": "object-fit:cover;object-position:center;",
  },
  "tag": "img",
}
`;

exports[`qwik directives > Image > maxWidth is added to the srcs 1`] = `
{
  "children": undefined,
  "props": {
    "srcset": "http://foo.builder.io/foo?format=webp&width=100 100w, http://foo.builder.io/foo?format=webp&width=200 200w, http://foo.builder.io/foo?format=webp&width=400 400w, http://foo.builder.io/foo?format=webp&width=800 800w, http://foo.builder.io/foo?format=webp&width=1200 1200w, http://foo.builder.io/foo?format=webp&width=1600 1600w, http://foo.builder.io/foo?format=webp&width=2000 2000w, http://foo.builder.io/foo?format=webp&width=1234 1234w, http://foo.builder.io/foo?format=webp&width=456 456w",
    "type": "image/webp",
  },
  "tag": "source",
}
`;
